agregado el contenido del blog y tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse accusamus dolorem ullam! Mollitia quasi aperiam ducimus minus tenetur, corrupti quis iste quidem error, dicta molestias nesciunt illo nemo harum quae.</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis porro vel quis ut cum nostrum, aspernatur unde vero placeat quod eligendi minima, atque temporibus dignissimos ratione dolorum hic voluptates non.
                 Consequatur dicta necessitatibus, eum recusandae soluta voluptas sint repudiandae beatae deleniti aspernatur sed eius ullam asperiores cupiditate. Laborum qui totam corrupti omnis voluptas quisquam officia voluptatum iusto, similique adipisci mollitia?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam suscipit veniam reprehenderit dolor? Ipsa modi magni dignissimos. Repudiandae et molestiae similique. Hic iste assumenda deleniti. Error ab maxime aspernatur inventore.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam ea dicta! Inventore, doloribus error veritatis velit consequatur officia temporibus magnam. Doloremque, iure a eos modi omnis quasi odit maiores?</p>
             </div>
     </div>
     
